Changes to work with pragtical luajit

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,7 +28,7 @@ jobs:
           git tag -f continuous
           git push -f origin refs/tags/continuous
           gh release delete -y continuous || true; gh release create -p -t 'Continuous Release' continuous *.so *.dll
-          if [[ `git tag --points-at HEAD | head -c 1` == "v" ]]; then
+          if git tag --points-at HEAD | tail -n1 | grep "^v"; then
             gh release delete -y v$VERSION || true;
             gh release create -t v$VERSION v$VERSION *.so *.dll
             gh release delete -y latest || true;
@@ -36,6 +36,7 @@ jobs:
           fi
 
   build_macos:
+    permissions: write-all
     needs: build_linux_windows
     runs-on: macos-11
     env:
@@ -55,7 +56,7 @@ jobs:
           BIN=libterminal.x86_64-darwin.so ./build.sh -DLIBTERMINAL_VERSION='"'$VERSION-x86_64-darwin'"'
           BIN=libterminal.aarch64-darwin.so CC=clang CFLAGS="-arch arm64" ./build.sh -DLIBTERMINAL_VERSION='"'$VERSION-x86_64-darwin'"'
           gh release upload continuous *.so
-          if [[ `git tag --points-at HEAD | head -c 1` == "v" ]]; then
+          if git tag --points-at HEAD | tail -n1 | grep "^v"; then
             gh release upload v$VERSION *.so
             gh release upload latest *.so
             git branch -f latest HEAD
