--- a/manifest.json
+++ b/manifest.json
@@ -1,23 +1,23 @@
 {
   "addons": [{
     "id": "terminal",
-    "description": "An integrated terminal for lite-xl.",
+    "description": "An integrated terminal for pragtical.",
     "version": "0.9",
     "path": "plugins/terminal",
     "files": [{
-      "url": "https://github.com/adamharrison/lite-xl-terminal/releases/download/latest/libterminal.x86_64-linux.so",
+      "url": "https://github.com/pragtical/terminal/releases/download/latest/libterminal.x86_64-linux.so",
       "arch": "x86_64-linux",
       "checksum": "SKIP"
     }, {
-      "url": "https://github.com/adamharrison/lite-xl-terminal/releases/download/latest/libterminal.x86_64-darwin.so",
+      "url": "https://github.com/pragtical/terminal/releases/download/latest/libterminal.x86_64-darwin.so",
       "arch": "x86_64-darwin",
       "checksum": "SKIP"
     }, {
-      "url": "https://github.com/adamharrison/lite-xl-terminal/releases/download/latest/libterminal.aarch64-darwin.so",
+      "url": "https://github.com/pragtical/terminal/releases/download/latest/libterminal.aarch64-darwin.so",
       "arch": "aarch64-darwin",
       "checksum": "SKIP"
     }, {
-      "url": "https://github.com/adamharrison/lite-xl-terminal/releases/download/latest/libterminal.x86_64-windows.dll",
+      "url": "https://github.com/pragtical/terminal/releases/download/latest/libterminal.x86_64-windows.dll",
       "arch": "x86_64-windows",
       "checksum": "SKIP"
     }]
