--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,5 +1,6 @@
 name: CI
 on: { push: { branches: [master] } }
+permissions: write-all
 jobs:
   version:
     runs-on: ubuntu-latest
@@ -26,9 +27,8 @@ jobs:
   build_linux:
     needs: [version]
     permissions: write-all
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     defaults: { run: { shell: bash } }
-    container: ghcr.io/lite-xl/lite-xl-build-box:latest
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
@@ -100,13 +100,3 @@ jobs:
         gh release upload continuous Linux/*.so MacOS/*.so Windows/*.dll
         git tag -f continuous
         git push -f origin refs/tags/continuous
-    - name: Discord Webhook
-      env: { DISCORD_WEBHOOK: "${{ secrets.DISCORD_WEBHOOK }}" }
-      run: |
-        if [[ `git tag --points-at HEAD v* | head -c 1` == "v" ]]; then
-          perl -pe 'last if $_ =~ m/^\s*#/ && $_ !~ m/#\s*${{ needs.version.outputs.version }}/' < CHANGELOG.md | tail -n +2 > NOTES.md
-          perl -e 'use JSON qw(encode_json from_json); $/ = undef; print encode_json({ content => "## Lite XL Terminal v${{ needs.version.outputs.version }} has been released!\nhttps://github.com/adamharrison/lite-xl-terminal/releases/tag/v${{ needs.version.outputs.version }}\n\n### Changes in ${{ needs.version.outputs.version }}:\n" . <> })' < NOTES.md |
-            curl -H 'Content-Type:application/json' $DISCORD_WEBHOOK -X POST -d "$(</dev/stdin)"
-        fi
-
-
