--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -66,7 +66,7 @@ jobs:
 
   build_macos:
     needs: [version]
-    runs-on: macos-13
+    runs-on: macos-15-intel
     env:
       CC: clang
     steps:
@@ -78,7 +78,7 @@ jobs:
         run: |
           ./build.sh clean
           BIN=libterminal.x86_64-darwin.so MACOSX_DEPLOYMENT_TARGET=10.11 ./build.sh -O3 -DLIBTERMINAL_VERSION='"'${{ needs.version.outputs.version }}-x86_64-darwin'"'
-          BIN=libterminal.aarch64-darwin.so MACOSX_DEPLOYMENT_TARGET=11.0 CC=clang CFLAGS="-arch arm64" ./build.sh -O3 -DLIBTERMINAL_VERSION='"'${{ needs.version.outputs.version }}-x86_64-darwin'"'
+          BIN=libterminal.aarch64-darwin.so MACOSX_DEPLOYMENT_TARGET=11.0 CC=clang CFLAGS="-arch arm64" ./build.sh -O3 -DLIBTERMINAL_VERSION='"'${{ needs.version.outputs.version }}-aarch64-darwin'"'
       - name: Upload x86_64 Artifacts
         uses: actions/upload-artifact@v4
         with: { name: "MacOS_x86_64", path: "libterminal.x86_64-darwin.so" }
